--- a/requirements.txt
+++ b/requirements.txt
@@ -22,13 +22,14 @@ narwhals==1.42.0
 numpy==2.0.2
 packaging==24.2
 pandas==2.3.0
-pillow==11.2.1
+Pillow==11.2.1
 protobuf==6.31.1
 pyarrow==20.0.0
 pydeck==0.9.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
+qrcode
 referencing==0.36.2
 requests==2.32.4
 rpds-py==0.25.1
